--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
+    "motion": "^12.17.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-just-parallax": "^3.1.16",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7"
   },
